[build-system]
requires = ["meson", "ninja"]

[project]
author="Daniel Wagner"
author-email="dwagner@suse.de"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
description-file="README.md"
home-page = "https://github.com/igaw/libimpel"
license="GPL-2.0-only"
requires-python=">=3.7"
summary="Python bindings for libimpel"

